--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,10 +4,20 @@
     padding: 0;
     margin: 0;
 }
+/* font-family: 'IM Fell English', serif; */
 
+  
+:root {
+    /* declare a variable with `--` syntax */
+    --darkliver: #5e0e14;
+    --silverchalice: #a58f6e;
+    --spanishgrey: #caba9e;
+    --wine:#66114d;
+  }
 
 body{
-    background-color: darkslategrey;
+    background: rgb(0,0,0);
+    font-family:'IM Fell English', serif;
     font-size: medium;
 }
 /*============
@@ -20,10 +30,10 @@ top box, font and background
     justify-content: space-between;
     width:100%;
     height: 100px;
-    font-family: 'Times New Roman', Times, serif;
-    background-color: #122d3a;
-    color: #ffffff;
-    border: black 5px solid;
+        background: var(--silverchalice);
+/* background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,245,39,1) 11%, rgba(255,134,36,1) 59%, rgba(54,9,62,1) 79%); */
+    color:white;
+    border-bottom: var(--darkliver) 10px solid;
     
 }
 
@@ -31,8 +41,8 @@ h1 {
     font-size: 300%;
     float:left;
     margin-top: 30px;
-    border:2px solid crimson;
-    background-color: crimson;
+    /* border:2px solid crimson; */
+    /* background-color: crimson; */
     
 }
 
@@ -40,9 +50,9 @@ nav {
     float:right;
     width: auto;
     height: auto;
-    border:black 5px solid;
+    /* border:var(--wine) 5px solid; */
     list-style-type: none;
-    background-color: cyan;
+    background-color: var(--spanishgrey);
 }
 
 ul{
@@ -51,11 +61,11 @@ ul{
 }
 
 li {
+    font-size: 155%;
     justify-content: space-evenly;
     align-items: flex-end;
-    margin: 0 20px 0 0;
-    background-color: darkmagenta;
-    border:white solid 3px;
+    margin: 0 25px 0 0;
+    background-color: var(--spanishgrey);
     list-style-type: none;
 }
 
@@ -77,13 +87,15 @@ making that jumbo work
 text in the jumbotron
 ======================*/
 h2{
+    
     font-size: 200%;
     float: right;
     z-index: 1;
+    padding: 5px;
     margin-top: -100px;
     margin-right: 40px;
     border: black 2px solid;
-    background-color: crimson;
+    background-color: rgb(182, 9, 44);
     color:seashell;
 
 }
@@ -99,28 +111,37 @@ meat and potatoes
 
 .sidebar{
     flex: 1 1 30%;
-    background:red;
+    background: var(--spanishgrey);
+    border-right: 4px var(--darkliver) solid;
 }
 
 #aboutme{
+    margin-right:15%;
+    margin-top: 15%;
     display: flex;
     justify-content: flex-end;
-    border:white 1px solid;
+    /* border:white 1px solid; */
     font-size: 150%;
+    color:var(--darkliver);
 }
 
 #mywork{
+    margin-right:15%;
+    margin-top: 25%;
     display: flex;
     justify-content: flex-end;
-    border:white 1px solid;
+    /* border:white 1px solid; */
+    color:var(--darkliver);
     font-size: 150%;
 }
 
 #contactme{
+    margin:15%;
     display: flex;
     justify-content: flex-end;
-    border:white 1px solid;
+    /* border:white 1px solid; */
     font-size: 150%;
+    Color:var(--darkliver);
 }
 
 /* ==================
@@ -167,20 +188,7 @@ The content
     background-position: center;
     background-color:chocolate;
 }
-/* .cardheader{
-    border: black solid 1px;
-    background: cadetblue;
-    width: 10%;
-    position: relative;
-    margin-right: -100px;
 
-} */
-/* 
-#mainpic{
-    margin: 10px 0 10px 13%;
-    max-block-size: 400px;
-
-} */
 
 .minicard{
     margin:5px;
@@ -200,6 +208,39 @@ The content
     background: white;
     z-index: 6;
 }
+
+/* =====================
+footer 
+================== */
+footer {
+    display: flex;
+    background-color: darkblue;
+    justify-content: space-around;
+}
+
+.footerbits{
+    
+    align-items: center;
+    margin: 0 20px 0 0;
+    border:white solid 3px;
+    background:red;
+}
+
+
+/* .cardheader{
+    border: black solid 1px;
+    background: cadetblue;
+    width: 10%;
+    position: relative;
+    margin-right: -100px;
+
+} */
+/* 
+#mainpic{
+    margin: 10px 0 10px 13%;
+    max-block-size: 400px;
+
+} */
 /* 
 #minicard{
     padding: 50px;
@@ -219,19 +260,3 @@ The content
 /* .minicard{
     display:flex
 } */
-/* =====================
-footer 
-================== */
-footer {
-    display: flex;
-    background-color: darkblue;
-    justify-content: space-around;
-}
-
-.footerbits{
-    
-    align-items: center;
-    margin: 0 20px 0 0;
-    border:white solid 3px;
-    background:red;
-}
