--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,6 @@
 }
 /* font-family: 'IM Fell English', serif; */
 
-  
 :root {
     /* declare a variable with `--` syntax */
     --darkliver: #5e0e14;
@@ -27,6 +26,7 @@ top box, font and background
 
 #theheader /*not to be confused with the element header */{
     display: inline-flex;
+    flex-wrap: wrap;
     align-items: flex-end;
     justify-content: space-between;
     width:100%;
@@ -78,7 +78,7 @@ making that jumbo work
     width: 100%;
     margin-bottom: 15px;
     z-index: 0;
-    background-size:cover;
+    background-size:auto;
     background-position: center;
     background-color: cyan;
     background-image:url("../images/skullbones.jpg");
@@ -96,9 +96,9 @@ h2{
     padding: 5px;
     margin-top: -100px;
     margin-right: 40px;
-    border: black 2px solid;
-    background-color: var(--spanishgrey)
-    color:var(var(--darkliver));
+    /* border: black 2px solid; */
+    background-color: var(--spanishgrey);
+    color:var(--darkliver);
 
 }
 /*=============
@@ -158,12 +158,18 @@ The content
 }
 
 #mybodycard{
+    margin-left: 10%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    max-width: 400px;
     width: 90%;
+    
     /* border:white dotted 2px; */
     max-width: 400px;
 }
 
 .mybody {
+    
     color: var(--darkliver);
     background:var(--spanishgrey)
 }
@@ -184,32 +190,48 @@ The content
 
 #maincard{
     padding: 50px;
-    min-height: 200px;
-    min-width: 200px;
-    background-image: url(../images/test2.png);
+    min-height: 250px;
+    min-width: 80%;
+    background-image: url(../images/engine.jpg);
     background-size:cover;
     background-position: center;
     background-color:chocolate;
 }
 
+.maincardheader{
+    font-size: 145%;
+    position: relative;
+    width: 100px;
+    right: 10px;
+    padding: 10px;
+    background: var(--spanishgrey);
+    color: var(--darkliver);
+    border: var(--darkliver) 3px solid;
+}
 
 .minicard{
+    
     margin:5px;
     padding: 50px;
     min-height: 50px;
-    min-width: 50px;
-    background-image: url(../images/test2.png);
+    min-width: 45%;
+    background-image: url(../images/skullbones1.png);
     background-size:cover;
     background-position: center;
     background-color:chocolate;
+    border:1px var(--darkliver) solid
+
 }
 
 .minicardheader{
     position: relative;
-    right: 40%;
+    width:100px;
+    right: 5%;
     padding: 10px;
-    background: white;
-    z-index: 6;
+    background: var(--spanishgrey);
+    color:var(--darkliver);
+    border:var(--darkliver) solid 4px;
+    
 }
 
 /* =====================
@@ -229,6 +251,37 @@ footer {
     background:red;
 }
 
+/* ========================
+EFFECTS=
+/* ================== */
+.minicardheader:hover{
+  box-shadow: inset 0px 0px 10px rgb(255, 62, 62), 0 0 15px rgb(32, 12, 12);
+} 
+.minicard:hover{
+    width: 150px;
+    height: 150px;
+    background-color: rgb(255,62,62);
+    
+    box-shadow: 0px 0px 30px 30px rgb(32, 12, 12);
+}
+
+@media screen and (max-width: 768px) {
+    header {
+      flex-direction: column;
+    }
+  
+    main {
+      max-width: 1200px;
+    }
+  }
+  
+
+
+
+/* .code-card .card-header {
+  border-radius: 8px;
+  transition: all 0.5s ease-in-out;
+} */
 
 /* .cardheader{
     border: black solid 1px;
