--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ top box, font and background
     align-items: flex-end;
     justify-content: space-between;
     width:100%;
-    height: 100px;
+    height: 35%;
         background: var(--silverchalice);
 /* background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,245,39,1) 11%, rgba(255,134,36,1) 59%, rgba(54,9,62,1) 79%); */
     color:white;
@@ -257,7 +257,15 @@ footer {
 EFFECTS=
 /* ================== */
 
+.footerbits:hover{
+    background-color: white;
+    color: black;
+}
 
+li:hover {
+    background-color: white;
+    color: black;
+}
 
 .minicardheader:hover{
   box-shadow: inset 0px 0px 10px rgb(255, 62, 62), 0 0 15px rgb(32, 12, 12);
