--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -297,7 +297,7 @@ li:hover {
       flex-direction: column;
     }
   
-    main {
+    body {
       max-width: 1200px;
       min-width: 450px;
     }
